shipping charges with category done..

--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -11,7 +11,7 @@
         <li active-state="main.account.inventory" ui-sref="main.account.inventory.list"  ><a><i class="soap-icon-list circle"></i>Inventory</a></li>
         <li active-state="main.account.orders" ui-sref="main.account.orders.list"  ><a><i class="soap-icon-bag circle"></i>My Orders</a></li>
         <li active-state="main.account.settings" ui-sref="main.account.settings.general"  ><a><i class="soap-icon-settings circle"></i>Settings</a></li>
-        <li active-state="" ui-sref=""  ><a><i class="soap-icon-settings circle"></i>Rent Orders</a></li>
+        <li><a><i class="soap-icon-settings circle"></i>Rent Orders</a></li>
     </ul>
     <div class="tab-content">
         <ui-view/>
