Settings UI fixes after Angular merge

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5103,4 +5103,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
     padding-left: 0px;
   }
 }
+.width-auto {
+  width: auto !important;
+  padding: 0 12px !important;
+}
 /* custom style ends*/
