--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -41,7 +41,7 @@
 
         <div class="panel style1 arrow-right">
             <h4 class="panel-title">
-                <a   ng-click="filterEx[2]=!filterEx[2]" ng-class="{'collapsed':filterEx[2]}">Availability
+                <a ng-click="filterEx[2]=!filterEx[2]" ng-class="{'collapsed':filterEx[2]}">Availability
                     Locations</a>
             </h4>
 
@@ -96,8 +96,8 @@
             <li ng-class="{'active':searchMdl.sortBy=='daily_price'}" ng-click="searchMdl.sort('daily_price')"
                 class="sort-by-price"><a class="sort-by-container"><span>price</span></a></li>
             <li class="clearer visible-sms"></li>
-            <li class="sort-by-rating"><a class="sort-by-container"><span>rating</span></a>
-            </li>
+            <!--<li class="sort-by-rating"><a class="sort-by-container"><span>rating</span></a>
+            </li>-->
             <!--<li class="sort-by-popularity"><a class="sort-by-container"><span>popularity</span></a>
             </li>-->
         </ul>
