additional charge minor changes.

--- a/src/app/views/account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/account/settings/additional-charges/additional-charges.html
@@ -54,12 +54,14 @@
             <div class="col-xs-6 col-sm-2 col-md-2">
                 <select ng-model="chargesMdl.editData.unit" name="unit">
                     <option value="flat">Flat</option>
-                    <option value="perc">Percentage</option>
+                    <option value="pct">Percentage</option>
                 </select>
             </div>
             <div class="col-xs-6 col-sm-2 col-md-2">
                 <select ng-model="chargesMdl.editData.item_kind" name="kind">
-                    <option value="rental">rental</option>
+                    <option value="rental">Rental</option>
+                    <option value="purchase">Purchase</option>
+                    <option value="all">All</option>
                 </select>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-2">
