--- a/src/app/views/account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/account/settings/additional-charges/additional-charges.html
@@ -103,7 +103,7 @@
             </tags-input>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-1">
-            <button class="btn-small uppercase" ng-click="chargesMdl.add()">Add</button>
+            <button class="button btn-mini uppercase green" ng-click="chargesMdl.add()">Add</button>
         </div>
     </form>
 
