--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -102,7 +102,7 @@
                 <li ng-repeat="bc in mainMdl.breadcrumbs">
                     {{bc.title}}
                 </li>
-                <li>
+                <li ng-if="mainMdl.showToggle">
                     <div class="btn-group" role="group" >
                         <button active-state="main.sellerAccount" ui-sref="main.sellerAccount.orders" type="button" class="btn btn-default">Seller</button>
                         <button active-state="main.account"    ui-sref="main.account.dashboard" type="button" class="btn btn-default">Buyer</button>
