--- a/src/app/views/payment/payment.html
+++ b/src/app/views/payment/payment.html
@@ -3,21 +3,22 @@
     <form name="payment" id="braintree-payment-form">
         <h2>Braintree Payment Form</h2>
         <div class="col-sm-9 no-padding no-float shortcode">
+            <braintree-dropin></braintree-dropin>
+            <!--<div class="row form-group">-->
+                <!--<div class="col-sms-6 col-sm-6">-->
+                    <!--<label>Card Details</label>-->
+                    <!--<input ng-model="creditCard.number" placeholder="4111111111111111" />-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="row form-group">-->
+                <!--<div class="col-sms-6 col-sm-6">-->
+                    <!--<label>Date of Expiry</label>-->
+                    <!--<input ng-model="creditCard.expirationDate" placeholder="10/18"/>-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
-                    <label>Card Details</label>
-                    <input ng-model="creditCard.number" placeholder="4111111111111111" />
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Date of Expiry</label>
-                    <input ng-model="creditCard.expirationDate" placeholder="10/18"/>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <button type="submit" value="Purchase"  ng-click="payButtonClicked()" class="button btn-medium orange">Purchase</button>
+                    <button type="submit" value="Purchase"  ng-click="pay()" class="button btn-medium orange">Purchase</button>
                 </div>
             </div>
         </div>
