seller order details..

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -104,7 +104,7 @@
                 </li>
                 <li ng-if="mainMdl.showToggle">
                     <div class="btn-group" role="group" >
-                        <button active-state="main.sellerAccount" ui-sref="main.sellerAccount.orders" type="button" class="btn btn-default">Seller</button>
+                        <button active-state="main.sellerAccount" ui-sref="main.sellerAccount.orders.list" type="button" class="btn btn-default">Seller</button>
                         <button active-state="main.account"    ui-sref="main.account.dashboard" type="button" class="btn btn-default">Buyer</button>
                     </div>
                 </li>
