--- a/src/app/views/seller-account/orders/process/process.html
+++ b/src/app/views/seller-account/orders/process/process.html
@@ -1,4 +1,4 @@
-<h1>view</h1>
+<h1>Process</h1>
 <button ui-sref="main.sellerAccount.orders.view">View</button>
 <button ui-sref="main.sellerAccount.orders.process">Process</button>
 <button ui-sref="main.sellerAccount.orders.list">list</button>
