--- a/src/app/views/seller-account/orders/orders.html
+++ b/src/app/views/seller-account/orders/orders.html
@@ -1,8 +1,5 @@
+<div id="booking" class="tab-pane fade in">
+    <ui-view>
 
-<h2>My Orders</h2>
-
-<div class="booking-history">
-
-    <ui-view></ui-view>
-
+    </ui-view>
 </div>
