equipment details fixes

--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -270,7 +270,7 @@
         </article>
         <dl class="other-details">
             <dt class="feature" style="border-top: none;">Shipping Cost</dt><dd class="value" style="border-top: none;">${{mdl.carData.shipping_charge || 0}}</dd>
-            <dt class="feature">Service Tax</dt><dd class="value">${{0}}</dd>
+            <dt class="feature">Additional Charges</dt><dd class="value">${{1}}</dd>
             <dt class="total-price">Total Price</dt><dd class="total-price-value">${{mdl.cartData.total}}</dd>
         </dl>
     </div>
