--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -67,12 +67,12 @@
 <div class="tab-container" style="margin-top:80px;">
 <ul class="tabs">
     <li ng-class="{'active':mdl.tab2=='description'}"><a ng-click="mdl.tab2='description'">Description</a></li>
-    <li ng-class="{'active':mdl.tab2=='similar'}"><a ng-click="mdl.tab2='similar'">Similar Equipments</a></li>
-    <li ng-class="{'active':mdl.tab2=='features'}"><a ng-click="mdl.tab2='features'">Features</a></li>
-    <li ng-class="{'active':mdl.tab2=='reviews'}"><a ng-click="mdl.tab2='reviews'">Reviews</a></li>
-    <li ng-class="{'active':mdl.tab2=='faqs'}"><a ng-click="mdl.tab2='faqs'">FAQs</a></li>
-    <li ng-class="{'active':mdl.tab2=='write-review'}"><a ng-click="mdl.tab2='write-review'">Write a Review</a></li>
-</ul>
+    <!--<li ng-class="{'active':mdl.tab2=='similar'}"><a ng-click="mdl.tab2='similar'">Similar Equipments</a></li>
+    --><!--<li ng-class="{'active':mdl.tab2=='features'}"><a ng-click="mdl.tab2='features'">Features</a></li>
+    --><li ng-class="{'active':mdl.tab2=='reviews'}"><a ng-click="mdl.tab2='reviews'">Reviews</a></li>
+    <!--<li ng-class="{'active':mdl.tab2=='faqs'}"><a ng-click="mdl.tab2='faqs'">FAQs</a></li>-->
+    <!--<li ng-class="{'active':mdl.tab2=='write-review'}"><a ng-click="mdl.tab2='write-review'">Write a Review</a></li>
+--></ul>
 <div class="tab-content">
 <div ng-show="mdl.tab2=='description'" ng-class="{'fade in active':mdl.tab2=='description'}" class="tab-pane" >
     {{mdl.equi.description}}
