seller page , dashboard

--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -3,14 +3,11 @@
         <li ui-sref-active="active" ui-sref="main.account.dashboard"  ><a><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
         <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li>
         <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Equipments</a></li>
+        <li active-state="main.account.favorites" ui-sref="main.account.favorites"><a><i class="soap-icon-businessbag circle"></i>Favorites</a></li>
         <li active-state="main.account.jobsites"   ui-sref="main.account.jobsites.list"  ><a><i class="soap-icon-departure circle"></i>Jobsites</a></li>
-        <!--<li ui-sref-active="active" ui-sref="main.account.favourites"><a><i class="soap-icon-conference circle"></i>Favourited</a></li>-->
-        <!--<li ui-sref-active="active" ui-sref="main.account.bookings"  ><a><i class="soap-icon-conference circle"></i>Sales</a></li>--> <!-- List of incoming orders, User can click on order to see equipments and its details, Can update status with comment for reasons of changing status, Status: Not Confirmed / Confirm / Approved or Cancelled / Ready to Pickup or Ready to Ship / Picked up or Dispatched / Delivered / End Contract&ndash;&gt;
-        <!--<li ui-sref-active="active" ui-sref="main.account.requests"  ><a><i class="soap-icon-conference circle"></i>Requests</a></li>-->
         <li active-state="main.account.invoices" ui-sref="main.account.invoices.list"  ><a><i class="soap-icon-card circle"></i>Invoices</a></li>
         <li active-state="main.account.inventory" ui-sref="main.account.inventory.list"  ><a><i class="soap-icon-list circle"></i>Inventory</a></li>
         <li active-state="main.account.orders" ui-sref="main.account.orders.list"  ><a><i class="soap-icon-bag circle"></i>My Orders</a></li>
-        <li active-state="main.account.settings" ui-sref="main.account.settings.general"  ><a><i class="soap-icon-settings circle"></i>Settings</a></li>
         <li><a><i class="soap-icon-settings circle"></i>Rent Orders</a></li>
     </ul>
     <div class="tab-content">
