--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -42,7 +42,7 @@
             <div class="fact red">
                 <div class="numbers counters-box">
                     <dl>
-                        <dt class="display-counter" data-value="3250">0</dt>
+                        <dt class="display-counter" data-value="3250">{{mdl.favoriteCount || 0}}</dt>
                         <dd>Favourited</dd>
                     </dl>
                     <i class="icon soap-icon-wishlist"></i>
