--- a/src/app/views/seller-account/seller-account.html
+++ b/src/app/views/seller-account/seller-account.html
@@ -3,6 +3,7 @@
         <li active-state="main.sellerAccount.orders"    ui-sref="main.sellerAccount.orders.list">   <a><i class="soap-icon-user circle"></i>Orders  </a></li>
         <li active-state="main.sellerAccount.inquiries" ui-sref="main.sellerAccount.inquiries"><a><i class="soap-icon-user circle"></i>Inquires</a></li>
         <li active-state="main.sellerAccount.invoices"  ui-sref="main.sellerAccount.invoices"> <a><i class="soap-icon-user circle"></i>Invoices</a></li>
+        <li active-state="main.sellerAccount.settings"  ui-sref="main.sellerAccount.settings.general"> <a><i class="soap-icon-user circle"></i>Settings</a></li>
     </ul>
     <div class="tab-content">
         <ui-view/>
