--- a/src/app/views/seller-account/settings/settings.html
+++ b/src/app/views/seller-account/settings/settings.html
@@ -4,13 +4,13 @@
         <hr />
 
         <ul class="nav nav-tabs">
-            <li ui-sref-active="active" ui-sref="main.account.settings.general">
+            <li ui-sref-active="active" ui-sref="main.sellerAccount.settings.general">
                 <a class="ng-click-active">General Settings</a>
             </li>
-            <li ui-sref-active="active" ui-sref="main.account.settings.shipping">
+            <li ui-sref-active="active" ui-sref="main.sellerAccount.settings.shipping">
                 <a class="ng-click-active">Shipping</a>
             </li>
-            <li ui-sref-active="active" ui-sref="main.account.settings.additionalCharges">
+            <li ui-sref-active="active" ui-sref="main.sellerAccount.settings.additionalCharges">
                 <a class="ng-click-active">Additional Charges</a>
             </li>
         </ul>
