--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -19,7 +19,7 @@
                     </slide>
             </carousel>
         </div>
-        <div ng-show="mdl.tab1=='map'" ng-class="{'fade in active':mdl.tab1=='map'}" class="tab-pane">
+        <div class="tab-pane fade in active" ng-class="{'fade in active':mdl.tab1=='map'}" >
             <map style="height: 450px;"></map>
         </div>
         <div ng-show="mdl.tab1=='calendar'" id="calendar-tab" ng-class="{'fade in active':mdl.tab1=='calendar'}" class="tab-pane">
@@ -773,7 +773,7 @@
             <a process-indicator class="button yellow full-width uppercase btn-small" ng-click="addToCart()">Reserve Equipment</a>
 
             <p></p>
-            <a class="button yellow full-width uppercase btn-small">Add to Favourites</a>
+            <a process-indicator="PI:AddToFavorite" ng-click="addToFavorite()" class="button yellow full-width uppercase btn-small">Add to Favourites</a>
 
         </div>
     </article>
