progress bar and process HTML for seller completed

--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -787,7 +787,7 @@
             <a class="contact-email"  >help@marketplace.com</a>
         </address>
     </div>
-    <div class="travelo-box">
+    <!--<div class="travelo-box">
         <h4>Similar Listings</h4>
 
         <div class="image-box style14">
@@ -825,7 +825,7 @@
                 </div>
             </article>
         </div>
-    </div>
+    </div>-->
     <div class="travelo-box book-with-us-box">
         <h4>Why Rent with us?</h4>
         <ul>
