--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5110,4 +5110,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
 .nav-tabs > li > a {
   cursor: pointer;
 }
+.progress-indicator {
+  font-size: 1.1em;
+}
 /* custom style ends*/
