--- a/src/app/views/seller-account/orders/view/view.html
+++ b/src/app/views/seller-account/orders/view/view.html
@@ -41,7 +41,7 @@
         </div>
         <div class="price-section table-cell" style="padding-right: 26px; padding-top: 0px;">
             <div class="price"><small>3 days tour</small><div class="price-per-unit">$534</div></div>
-            <a href="tour-booking.html" class="button green btn-small uppercase">Process</a>
+            <a ui-sref="main.sellerAccount.orders.process" class="button green btn-small uppercase">Process</a>
         </div>
     </div>
     <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
@@ -58,7 +58,7 @@
         </div>
         <div class="price-section table-cell" style="padding-right: 26px; padding-top: 0px;">
             <div class="price"><small>3 days tour</small><div class="price-per-unit">$534</div></div>
-            <a href="tour-booking.html" class="button green btn-small uppercase">Process</a>
+            <a ui-sref="main.sellerAccount.orders.process" class="button green btn-small uppercase">Process</a>
         </div>
     </div>
     <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
@@ -75,7 +75,7 @@
         </div>
         <div class="price-section table-cell" style="padding-right: 26px; padding-top: 0px;">
             <div class="price"><small>3 days tour</small><div class="price-per-unit">$534</div></div>
-            <a href="tour-booking.html" class="button green btn-small uppercase">Process</a>
+            <a ui-sref="main.sellerAccount.orders.process" class="button green btn-small uppercase">Process</a>
         </div>
     </div>
     <div class="intro2 small-box border-box table-wrapper hidden-table-sms cart-total">
